tests/Tree/negative/test007.jvt
-- call: wrong number of arguments

function f(x : *) : * {
  x
}

function main() : * {
  call[f](10, 11)
}
